--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sign_google">Sign In with Google</string>
     <string name="sign_facebook">Sign In with Facebook</string>
+
+    <string name="facebook_app_id">273556056537349</string>
+    <!--
+    273556056537349
+    422366334911677
+    -->
+    <string name="fb_login_protocol_scheme">fb273556056537349</string>
 </resources>
